Removed libgdx android/html/desktop ifrastructure
- This commit fixes the issue of only a very narrow subset of OpenGL
being available to Gaia Sky because we maintain android and webGL
projects. Not anymore, fortunately.
- Please, note that from this commit on, gaiasky must be run using:

```
 $ gradle core:run
```

- In the same fashion, all gradle tasks which previously required the
`desktop` project keyword now need to use `core` instead.
- `android`, `desktop` and `html` folders removed. `android/assets`
moved to root directory. Everything in `desktop` moved to `core`,
including scripts, libraries and sources.
- Updated all build scripts.
- Fixes #244